<resources>
    <string name="app_name">NUMAD22Sp_XueningWei</string>

    <string name="about_me_string">About me</string>
    <string name="title_activity_clicky_clicky">ClickyClicky</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Pressed">TextView</string>
    <string name="button">Button</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="about_me">About me</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="preesed">Preesed:-</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="pressed">Pressed:-</string>
    <string name="item_name">Website:</string>
    <string name="URL">Enter website URL (starting with https://)</string>
    <string name="tips">swap the item to delete!</string>
    <string name="laAndLo">Your latitude is __ and longitude is __. </string>
    <string name="locate_me">Locate me!</string>
    <string name="link_collector">Link Collector</string>
    <string name="locator">Locator</string>
    <string name="webservice">webService</string>
    <string name="web_go">Go!</string>
    <string name="web_search_reminder">Search your meal name here and get instructions!</string>
    <string name="arrabiata">Arrabiata</string>
</resources>